fix(api): expose rule aggregate version
